Remover warnings indesejados